--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quest",
+  "name": "HomyComb",
   
   "version": "1.0.0",
   
@@ -10,10 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "rm -rf ./static/*",
-    "stage00": "npm run start && webpack & webpack-dev-server --content-base --colors --port 9090 ./",
-    "stage01": "npm run start && NODE_VER=stage01 webpack & webpack-dev-server --content-base --colors --port 9090 ./",
-    "stage02": "npm run start && NODE_VER=stage02 webpack & webpack-dev-server --content-base --colors --port 9090 ./",
-    "stage03": "npm run start && NODE_VER=stage03 webpack & webpack-dev-server --content-base --colors --port 9090 ./"
+    "dev": "npm run start && webpack & webpack-dev-server --content-base --colors --port 9090 ./",
   },
   
   "repository": {
@@ -25,29 +22,29 @@
   "license": "ISC",
   
   "dependencies": {
-    "assets-webpack-plugin": "^3.4.0",
-    "autoprefixer-loader": "^3.2.0",
-    "bootstrap": "^3.3.7",
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "fs-extra": "^0.30.0",
-    "html-webpack-plugin": "^2.22.0",
-    "jquery": "^3.1.0",
-    "jsdoc": "^3.4.0",
-    "lodash": "^4.13.1",
-    "node-gyp": "^3.3.1",
-    "node-sass": "^3.7.0",
-    "npmconf": "^2.1.2",
-    "pug": "^2.0.0-beta5",
-    "pug-html-loader": "^1.0.8",
-    "pug-loader": "^2.2.1",
-    "sass-loader": "^3.2.0",
+    "assets-webpack-plugin": "3.4.0",
+    "autoprefixer-loader": "3.2.0",
+    "bootstrap": "3.3.7",
+    "chai": "3.5.0",
+    "css-loader": "0.23.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "fs-extra": "0.30.0",
+    "html-webpack-plugin": "2.22.0",
+    "jquery": "3.1.0",
+    "jsdoc": "3.4.0",
+    "lodash": "4.13.1",
+    "node-gyp": "3.3.1",
+    "node-sass": "3.7.0",
+    "npmconf": "2.1.2",
+    "pug": "2.0.0-beta5",
+    "pug-html-loader": "1.0.8",
+    "pug-loader": "2.2.1",
+    "sass-loader": "3.2.0",
     "scss-loader": "0.0.1",
-    "underscore": "^1.8.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.15.0"
+    "underscore": "1.8.3",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.15.0"
   }
 }
