--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "assets-webpack-plugin": "3.4.0",
     "autoprefixer-loader": "3.2.0",
+    "backbone": "^1.3.3",
     "bootstrap": "3.3.7",
     "chai": "3.5.0",
     "css-loader": "0.23.1",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "fs-extra": "0.30.0",
