--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "assets-webpack-plugin": "3.4.0",
     "autoprefixer-loader": "3.2.0",
     "backbone": "^1.3.3",
+    "body-parser": "^1.15.2",
     "bootstrap": "3.3.7",
     "chai": "3.5.0",
     "css-loader": "0.23.1",
